fix overlap of contact wrapper

--- a/src/components/ContactButtons.css
+++ b/src/components/ContactButtons.css
@@ -1,7 +1,7 @@
 .contact-wrapper{
 
     color: var(--main-text-color);
-
+    width:5%;
     position: sticky;
     position: -webkit-sticky;
     top:45%;
