--- a/src/components/LandingSection.css
+++ b/src/components/LandingSection.css
@@ -14,7 +14,7 @@
     transition: font-size 0.2s;
     transition-timing-function: ease-out;
     text-shadow: 3px 3px 6px black;
-
+    z-index: 20;
 }
 #name-header:hover{
     font-size:6em;
